# biorxiv-mcp

./: .gitignore  LICENSE  Makefile  README.md  biorxiv-mcp.service  biorxiv-sync.service  pyproject.toml  server.py  sync_runner.py
.github/workflows/: ci.yml
agents/: biorxiv.md
biorxiv_mcp/: auth.py  db.py  ratelimit.py  server.py  sync.py  toolkit.py
biorxiv_mcp/client/: api.py  config.py  main.py  tools.py
biorxiv_mcp/server/: app.py  auth.py  db.py  keys.py  main.py  mesh.py  sync.py  sync_runner.py
deploy/: SERVER.md  biorxiv-mcp.env.example  biorxiv-mcp.service  biorxiv-mcp.service.in  biorxiv-sync.service  biorxiv-sync.service.in  biorxiv-sync.timer  install_mcp.py
tests/: test_api.py  test_auth.py  test_client.py  test_db.py  test_endpoint.py  test_ratelimit.py  test_server.py
tests/client/: test_endpoint.py
tests/server/: test_ratelimit.py
