[project]
name = "biorxiv-mcp"
version = "0.2.0"
requires-python = ">=3.10"
dependencies = ["mcp[cli]", "httpx", "uvicorn", "starlette", "sse-starlette", "tomli>=1.1; python_version<'3.11'"]

[project.optional-dependencies]
test = ["pytest", "pytest-asyncio"]
dev = ["ruff", "mypy"]

[project.scripts]
# Client: stdio MCP server that proxies tools to the REST API.
biorxiv-mcp = "biorxiv_mcp.client.main:main"
# Server: REST API serving the local SQLite index.
biorxiv-mcp-server = "biorxiv_mcp.server.main:main"
# Admin: standalone sync runner.
biorxiv-mcp-sync = "biorxiv_mcp.server.sync_runner:main"

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["biorxiv_mcp*"]

[tool.mypy]
ignore_missing_imports = true

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
